--- a/report.tex
+++ b/report.tex
@@ -13,31 +13,27 @@
 
 \newpage
 
+
 \section{Introduction}
 \input{intro.tex}
-\newpage
 
 \section{Design}
 \input{design.tex}
-\newpage
 
 \section{Testing}
 \input{testing.tex}
-\newpage
 
 \section{Results}
 \input{results.tex}
-\newpage
 
 \section{Discussion}
 \input{discussion.tex}
-\newpage
 
-\section{Acknowledgements}
+
+%\section{Acknowledgements}
 
 \newpage
 \bibliography{library.bib}
-%\bibliographystyle{ieeetr}
 \bibliographystyle{unsrt}
 
 \newpage
@@ -49,5 +45,6 @@
     \item Firmware code can be found at: \newline \url{https://github.com/ajp15/MEngIndvProject-arduino}
     \item iPad app development can be found at: \newline \url{https://github.com/ajp15/MEngIndvProject-app2}
 \end{itemize}
+
 
 \end{document}
