--- a/results.tex
+++ b/results.tex
@@ -1,5 +1,14 @@
+% do i need subsections?
+
 \subsection{Standard Signals}
 % Insert plots comparing PicoLog and on app
 % comment on shape, peak to peak voltage etc. 
+% comment on peak time i.e. if there is a lag 
+% able to do three curves at once
+
+% comment on each wave.
+% - sine wave is relatvely well represented
+% - lower freq sine wave performs better? more points in a period are sampled?
+% - sqaure wave has discontinutites. there aren't representd as well. Expand on this point in the DISCUSSION saying that even though this is the case, the sudden disconitnuities tend to be noise and electrical artifacts. the transient changes occur gradually, and as shown by the sin wave will be able to be captured
 
 \subsection{Brain Signals}
