--- a/design.tex
+++ b/design.tex
@@ -42,7 +42,7 @@ The Arduino Nano is encoded to sample and process the three input signals receiv
 \subsubsection{Signal Processing}
 Every 200ms the Arduino reads the input signals at the A0, A1 and A7 pins and records the time, in milliseconds since the Arduino was connected to power, at which sampling occurred. Each input signal received by the Arduino is filtered with a low-pass filter with a cut off frequency of 1Hz. This cut off frequency was chosen because the events indicating a SD occur over a long time frame, as shown in Figure~\ref{fig: SD}, hence the changes occur slowly and at low frequency. The low pass filter attenuates high frequency components that may arise from noise or patient movement, allowing for a cleaner signal to be obtained.
 
-For every five samples of data recorded, so in a 1s period, the average voltage is calculated for each signal. This averaging methods allows large deviations and spikes to be smoothed, thereby reducing the effect of noise on the outputted data.
+For every five samples of data recorded, so in a 1s period, the average voltage is calculated for each neurochemical signal. This averaging methods allows large deviations and spikes to be smoothed, thereby reducing the effect of noise on the outputted data. This averaged value is then transmitted to the iPad app, and the raw input readings are discarded.
 
 \begin{figure}[t!]
 \centering
@@ -136,14 +136,6 @@ The Boutelle Group have developed a novel auto-calibration system that uses prog
 \subsubsection{Potassium Calibration}
 %\noindent \underline{Potassium Calibration} 
 
-\begin{figure}[b!]
-\centering
-\includegraphics[trim={0cm 5cm 0cm  5cm}, clip, width=0.75\textwidth]{./figures/ISE.pdf}
-\captionsetup{justification=centering}
-\caption{Electrochemical cell for a potentiometric measurement with an ISE \cite{LibreTexts2019}}
-\label{fig: ISE}
-\end{figure}
-
 For potassium, the conversion from voltage to concentration is given by a logarithmic relationship and can be derived by considering an ion selective electrode (ISE), as shown in Figure~\ref{fig: ISE}. The ISE has an ion-sensing membrane that responds selectively to a specific ion and outputs a voltage proportional to the activity of this ion \cite{Rogers2017, LibreTexts2019} and can be derived as follows. 
 
 The potential difference across the membrane, $E_{membrane}$ is given as the difference between the external side of the membrane, $E_{outer}$, where the analyte solution is, and the interal side of the membrane, $E_{inner}$ where the reference solution is:
@@ -194,7 +186,7 @@ Substituting equation (\ref{equation: log activity}) into equation (\ref{equatio
     \label{equation: membrane potential 3}
 \end{equation}
 
-Rearranging equation (\ref{equation: membrane potential 3}) gives:
+\noindent Rearranging equation (\ref{equation: membrane potential 3}) gives:
 
 \begin{equation}
     [K^{+}] = 10^{\big(\frac{V-C}{0.05916}\big)},
@@ -208,7 +200,15 @@ Rearranging equation (\ref{equation: membrane potential 3}) gives:
     \label{equation: C}
 \end{equation}
 
-\noindent where $V_{aCSF}$ is the voltage produced by the potassium ions concentration of $2.7mM$ in the aCSF, measured in volts. Only the voltage corresponding $[K^{+}] = 2.7mM$ is required from the calibration set up to be substitutes into equations (\ref{equation: K+ calibration}) and (\ref{equation: C}). Once the user inputs this calibration value, the user can view the concentration against time graph on the Potassium Ion Concentration page once the $Concentration$ button is clicked. \newline
+\noindent where $V_{aCSF}$ is the voltage produced by the potassium ions concentration of $2.7mM$ in the aCSF, measured in volts. Only the voltage corresponding $[K^{+}] = 2.7mM$ is required from the calibration set up to be substituted into equations (\ref{equation: K+ calibration}) and (\ref{equation: C}). Once the user inputs this calibration value, the user can view the concentration against time graph on the Potassium Ion Concentration page once the $Concentration$ button is clicked. \newline
+
+\begin{figure}[h!]
+\centering
+\includegraphics[trim={0cm 5cm 0cm  5cm}, clip, width=0.75\textwidth]{./figures/ISE.pdf}
+\captionsetup{justification=centering}
+\caption{Electrochemical cell for a potentiometric measurement with an ISE \cite{LibreTexts2019}}
+\label{fig: ISE}
+\end{figure}
 
 
 \subsubsection{Glucose and Lactate Calibration}
@@ -230,7 +230,7 @@ The Hill coefficient is equal to 1 since glucose and lactate have no substrate b
     \label{equation: Michaelis_menten}
 \end{equation}
 
-Since the concentrations of glucose and lactate being measured is low, such that $[S] << K_{m}$, equation~\ref{equation: Michaelis_menten} is reduced to a linear equation:
+Since the concentrations of glucose and lactate being measured is low, such that $[S] << K_{m}$, equation (\ref{equation: Michaelis_menten}) is reduced to a linear equation:
 
 \begin{equation}
     I_{rate} = \frac{I_{max}[S]}{K_{m}}.
@@ -252,9 +252,5 @@ During calibration, only three known concentrations of solutions are used and th
 \noindent where $x_{i}$ is the voltage recording, $\Bar{X}$ is the average voltage recording, $y_i$ is the known concentration, and $\Bar{Y}$ is the average concentration from the data set. 
 
 Now that the $m$ and $c$ coefficients have been determined, using $Concentration = m*Voltage + c$ the plot of voltage vs. time can be transposed into concentration vs. time for glucose and lactate.
-
-
-% K+ derivation
-
 
 
