--- a/discussion.tex
+++ b/discussion.tex
@@ -1,3 +1,12 @@
+% expanding on from results:
 
+% not so good at discontinuities on step curve. 
+% - sine wave is relatvely well represented
+% - lower freq sine wave performs better? more points in a period are sampled?
+% - sqaure wave has discontinutites. there aren't representd as well. Expand on this point in the DISCUSSION saying that even though this is the case, the sudden disconitnuities tend to be noise and electrical artifacts. the transient changes occur gradually, and as shown by the sin wave will be able to be captured
+
+From the experiments, the sine waves produced on the app were well represented compared to those produced on the PicoLog. The sine wave with a lower frequency held its shape better on the app as more points on the sine wave could be sampled as the signal frequency was much less than the app's sampling frequency of 1s. 
+
+On the other hand, the squares wave's discontinuities were not as sharp on the app compared to the PicoLog. This is due to the averaging method implemented on the Arduino 
 
 \subsection{Future Improvements}
