--- a/titlepage.tex
+++ b/titlepage.tex
@@ -44,7 +44,7 @@ Aishwarya Pattar
 %\begin{flushleft} 
 \large
 \textit{Supervisor:}
-Prof. Martyn G. Boutelle
+Professor Martyn G. Boutelle
 %\end{flushleft}
 
 
