--- a/report.tex
+++ b/report.tex
@@ -30,7 +30,10 @@
 \input{discussion.tex}
 
 
-%\section{Acknowledgements}
+\section{Acknowledgements}
+I would like to thank Professor Martyn. G Boutelle for allowing me to pursue this project that has greatly diversified my skill set, and for guiding me through this project. I would also like to thank Dr. Michelle Rogers for helping me navigate through LabChart and understand the data. I would like to thank Aidan Wickham for providing me with details about his PCB, which this project is based on. I would also like to thank Georgios Zafeiropoulos and Konstantinos Petkos for guiding me through the best methods to validate and test my prototype. 
+
+Finally, I would like to thank my parents for believing in me more than I could ever believe in myself, and Rohan for always supporting me through the highs and lows of this project.
 
 \newpage
 \bibliography{library.bib}
