--- a/results.tex
+++ b/results.tex
@@ -11,4 +11,4 @@
 % - lower freq sine wave performs better? more points in a period are sampled?
 % - sqaure wave has discontinutites. there aren't representd as well. Expand on this point in the DISCUSSION saying that even though this is the case, the sudden disconitnuities tend to be noise and electrical artifacts. the transient changes occur gradually, and as shown by the sin wave will be able to be captured
 
-\subsection{Brain Signals}
+\subsection{Spreading Depolarisation}
